# AERN

./: .gitattributes  CMakeLists.txt  QRCS-PL License.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Source/: AERN.sln
Source/ACD/: ACD.vcxproj  ACD.vcxproj.filters  appacd.c
Source/ADC/: ADC.vcxproj  ADC.vcxproj.filters  appadc.c  appadc.h
Source/AERN/: AERN.vcxproj  AERN.vcxproj.filters  adc.c  adc.h  admin.c  admin.h  aern.c  aern.h  aerncommon.h  aps.c  aps.h  ars.c  ars.h  certificate.c  certificate.h  client.c  client.h  commands.h  crypto.c  crypto.h  doxymain.h  fragment.c  fragment.h  help.c  help.h  lifecycle.c  lifecycle.h  logger.c  logger.h  mek.c  mek.h  menu.c  menu.h  (+13 more)
docs/: adc_8h_source.html  annotated_dup.js  appadc_8h_source.html  appars_8h_source.html  ars_8h.html  ars_8h_source.html  certificate_8h_source.html  classes.html  commands_8h.js  crypto_8h.html  dir_739e530fc6fa038c379ec8b4170d8153.js  dir_de2adc69ec964e74236dfd311e9ebacd.html  dir_de2adc69ec964e74236dfd311e9ebacd.js  doxygen_crawl.html  files_dup.js  functions.html  functions_d.html  functions_e.html  functions_f.html  functions_i.html  functions_j.html  functions_l.html  functions_m.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_v.html  functions_vars_f.html  functions_vars_h.html  functions_vars_j.html  functions_vars_l.html  functions_vars_m.html  functions_vars_n.html  functions_vars_s.html  functions_vars_u.html  functions_vars_v.html  functions_vars_x.html  globals.html  globals_dup.js  (+74 more)
(+598 files in other folders)
